Fix: Toast close button is not centered.

--- a/MyPlannerWeb/src/assets/components/ui-elements/_toasts.scss
+++ b/MyPlannerWeb/src/assets/components/ui-elements/_toasts.scss
@@ -18,5 +18,6 @@
 	font-family: "Inter", sans-serif;
 	font-weight: normal;
 	color: $vt-text-color-default;
-	opacity: .8;
+	opacity: 1;
+	margin-top: -3px;
 }
